fixed alignment of home landing page

--- a/src/App.css
+++ b/src/App.css
@@ -63,13 +63,13 @@
 }
 
 
+
 .powerful-results {
   background: linear-gradient(to right, #F0E2B6 0%, #F0E2B6 50%, #BFC1C2 100%); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 2em;
   font-weight: bold;
-  padding-left: 100px;
 }
 
 .home-background {
